# mauth-core

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  factbook.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fossa.yml  publish.yml
benches/: benchmark.rs
doc/: binding_to_ruby.md
src/: error.rs  lib.rs  mauth_error.rs  pem_format.rs  signable.rs  signer.rs  verifier.rs
tests/: protocol_test_suite.rs
