[package]
name = "mauth-core"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.22"
hex = "0.4"
lazy-regex = "3"
rsa = "0.9.0"
regex = { version = "1", default_features = false, features = ["std"] }
sha2 = { version = "0.10", features = ["oid"] }
urlencoding = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"
rstest = "0.19"

[[bench]]
name = "benchmark"
harness = false
