[package]
name = "mauth-core"
version = "0.5.0"
edition = "2021"
authors = ["Medidata Solutions <support@mdsol.com>"]
description = "Generate and verify Medidata MAuth protocol signatures"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mdsol/mauth-core"
repository = "https://github.com/mdsol/mauth-core"
documentation = "https://docs.rs/mauth-core/"
keywords = ["security", "authentication"]
categories = ["authentication"]

[dependencies]
thiserror = "1"
base64 = "0.22"
hex = "0.4"
lazy-regex = "3"
rsa = "0.9.0"
regex = { version = "1", default_features = false, features = ["std"] }
sha2 = { version = "0.10", features = ["oid"] }
urlencoding = "2"
spki = "0.7"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"
rstest = "0.19"

[[bench]]
name = "benchmark"
harness = false
