[package]
name = "mauth-core"
version = "0.6.1"
edition = "2021"
authors = ["Medidata Solutions <support@mdsol.com>"]
description = "Generate and verify Medidata MAuth protocol signatures"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mdsol/mauth-core"
repository = "https://github.com/mdsol/mauth-core"
documentation = "https://docs.rs/mauth-core/"
keywords = ["security", "authentication"]
categories = ["authentication"]

[dependencies]
thiserror = "2"
base64 = "0.22"
hex = "0.4"
lazy-regex = "3"
# Keep these crypto dependencies on stable, compatible versions.
# rsa 0.9 uses digest 0.10; moving to sha2 0.11 requires rsa 0.10, which is still RC.
rsa = "0.9.0"
regex = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", features = ["oid"] }
urlencoding = "2"
spki = "0.7"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.6"
rstest = "0.26"

[[bench]]
name = "benchmark"
harness = false
